xidlc/tests/snapshots/codegen_snapshot__ts__annotation_basic.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
annotation_basic.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface S {
        
            a: number;
                b?: number;
            }

    export type E = "A" | "B";

    

export type BM = number;

    

export type U = { a: number } | { b: number };

export {};
===============
annotation_basic.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const SSchema = z.object({
        
            a: z.coerce.number().int(),
        
            b: z.coerce.number().int().optional()
        
    });

    export const ESchema = z.enum(["A", "B"]);

    
    export const BMSchema = z.number().int();

    
    export const USchema = z.union([z.object({ a: z.coerce.number().int() }), z.object({ b: z.coerce.number().int() })]);
