xidlc/tests/snapshots/codegen_snapshot__ts__basic.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
basic.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface Point {
        
            x: number;
                y: number;
            }

export {};
===============
basic.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const PointSchema = z.object({
        
            x: z.coerce.number().int(),
        
            y: z.coerce.number().int()
        
    });
