xidlc/tests/snapshots/codegen_snapshot__ts__bitmask_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
bitmask_def.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export type EmptyBitmask = number;

    

export type SimpleBitmask = number;

    

export type PositionedBitmask = number;

export {};
===============
bitmask_def.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const EmptyBitmaskSchema = z.number().int();

    
    export const SimpleBitmaskSchema = z.number().int();

    
    export const PositionedBitmaskSchema = z.number().int();
