xidlc/tests/snapshots/codegen_snapshot__ts__bitset_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
bitset_def.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export type A = number;

    

export type A = number;

    

export type A = number;

export {};
===============
bitset_def.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const ASchema = z.number().int();

    
    export const ASchema = z.number().int();

    
    export const ASchema = z.number().int();
