xidlc/tests/snapshots/codegen_snapshot__ts__builtin_content_type.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
builtin_content_type.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    export type ContentType = "application/json" | "application/octet-stream" | "text/plain";

    export namespace documents {


    export interface Metadata {
            
                title: string;
                }


    export type Payload = { meta: Metadata } | { text: string };
}

export {};
===============
builtin_content_type.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    export const ContentTypeSchema = z.enum(["application/json", "application/octet-stream", "text/plain"]);

    export namespace documents {

        export const MetadataSchema = z.object({
            
                title: z.coerce.string()
            
        });

        export const PayloadSchema = z.union([z.object({ meta: MetadataSchema }), z.object({ text: z.coerce.string() })]);
}
