xidlc/tests/snapshots/codegen_snapshot__ts__const_binary.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_binary.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.
===============
const_binary.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.
import{z}from"zod";
