xidlc/tests/snapshots/codegen_snapshot__ts__const_dec.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_dec.d.ts
===============
// Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.
===============
const_dec.zod.ts
===============
// Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.
import{z}from"zod";
