xidlc/tests/snapshots/codegen_snapshot__ts__const_hex.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_hex.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

export{};
===============
const_hex.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

import{z}from"zod";
import{xjson}from"@xidl/xidl-typescript-codec";
