xidlc/tests/snapshots/codegen_snapshot__ts__const_scoped_name.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_scoped_name.d.ts
===============
// Code generated by xidlc-v0.80.1-dc38446f. DO NOT EDIT.

export{};
===============
const_scoped_name.zod.ts
===============
// Code generated by xidlc-v0.80.1-dc38446f. DO NOT EDIT.

import{z}from"zod";
import{xjson}from"xidl-typescript-codec";
