xidlc/tests/snapshots/codegen_snapshot__ts__enum_empty.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_empty.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    export type A = never;

export {};
===============
enum_empty.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    export const ASchema = z.never()
